--- a/style.css
+++ b/style.css
@@ -94,3 +94,75 @@ body {
 .upgrade-btn:hover {
     cursor: pointer;
 }
+
+#tip {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border: 2px solid #1ca5aa;
+    transition: 1s;
+}
+#tip-txt {
+    margin: 0;
+    padding: 1rem;
+}
+
+.multiplier {
+    background-color: rgb(240, 87, 87);
+    width: 15rem; height: 7rem;
+    position: absolute;
+    left: 50%; top: 50%;
+    border-radius: 7px;
+}
+#click-mult-btn {
+    transform: translate(-50%, -180%);
+}
+#click-mult-btn:hover {
+    cursor: pointer;
+    width: calc(15rem - 3px);
+    height: calc(7rem - 3px);
+    top: calc(50% - 4.5px);
+    /* border: 4px solid rgb(39, 208, 214); */
+}
+#click-mult-btn:active {
+    width: calc(15rem - 6px);
+    height: calc(7rem - 6px);
+    top: calc(50% - 7.5px);
+    /* border: 6px solid rgb(39, 208, 214); */
+}
+
+#idle-mult-btn {
+    transform: translate(-50%, 80%);
+}
+#idle-mult-btn:hover {
+    cursor: pointer;
+    width: calc(15rem - 3px);
+    height: calc(7rem - 3px);
+    top: calc(50% + 4.5px);
+    /* border: 4px solid rgb(39, 208, 214); */
+}
+#idle-mult-btn:active {
+    width: calc(15rem - 6px);
+    height: calc(7rem - 6px);
+    top: calc(50% + 7.5px);
+    /* border: 6px solid rgb(39, 208, 214); */
+}
+.multiplier h3 {
+    margin: 0; padding: 0s;
+    text-align: center;
+    position: absolute;
+    left: 50%; top: 50%;
+    transform: translate(-50%, -50%);
+    width: max-content;
+}
+
+
+#github-link {
+    position: absolute;
+    right: 10px;
+    bottom: 5px;
+}
+#github-link img {
+    width: 32px;
+    height: 32px;
+}
